compile.txt

> Configure project :app
WARNING: The option setting 'android.usesSdkInManifest.disallowed=false' is deprecated.
The current default is 'true'.
It will be removed in version 10.0 of the Android Gradle plugin.
WARNING: The option setting 'android.sdk.defaultTargetSdkToCompileSdkIfUnset=false' is deprecated.
The current default is 'true'.
It will be removed in version 10.0 of the Android Gradle plugin.
WARNING: The option setting 'android.enableAppCompileTimeRClass=false' is deprecated.
The current default is 'true'.
It will be removed in version 10.0 of the Android Gradle plugin.
WARNING: The option setting 'android.builtInKotlin=false' is deprecated.
The current default is 'true'.
It will be removed in version 10.0 of the Android Gradle plugin.
WARNING: The option setting 'android.newDsl=false' is deprecated.
The current default is 'true'.
It will be removed in version 10.0 of the Android Gradle plugin.
WARNING: The option setting 'android.r8.optimizedResourceShrinking=false' is deprecated.
The current default is 'true'.
It will be removed in version 10.0 of the Android Gradle plugin.
WARNING: The option setting 'android.defaults.buildfeatures.resvalues=true' is deprecated.
The current default is 'false'.
It will be removed in version 10.0 of the Android Gradle plugin.
WARNING: The property android.dependency.excludeLibraryComponentsFromConstraints improves project import performance for very large projects. It should be enabled to improve performance.
To suppress this warning, add android.generateSyncIssueWhenLibraryConstraintsAreEnabled=false to gradle.properties
WARNING: The property android.dependency.excludeLibraryComponentsFromConstraints improves project import performance for very large projects. It should be enabled to improve performance.
To suppress this warning, add android.generateSyncIssueWhenLibraryConstraintsAreEnabled=false to gradle.properties
WARNING: The property android.dependency.excludeLibraryComponentsFromConstraints improves project import performance for very large projects. It should be enabled to improve performance.
To suppress this warning, add android.generateSyncIssueWhenLibraryConstraintsAreEnabled=false to gradle.properties
WARNING: The property android.dependency.excludeLibraryComponentsFromConstraints improves project import performance for very large projects. It should be enabled to improve performance.
To suppress this warning, add android.generateSyncIssueWhenLibraryConstraintsAreEnabled=false to gradle.properties

> Task :app:preBuild UP-TO-DATE
> Task :app:preDebugBuild UP-TO-DATE
> Task :app:javaPreCompileDebug UP-TO-DATE
> Task :app:checkDebugAarMetadata UP-TO-DATE
> Task :app:processDebugNavigationResources UP-TO-DATE
> Task :app:compileDebugNavigationResources UP-TO-DATE
> Task :app:generateDebugResValues UP-TO-DATE
> Task :app:mapDebugSourceSetPaths UP-TO-DATE
> Task :app:generateDebugResources UP-TO-DATE
> Task :app:mergeDebugResources UP-TO-DATE
> Task :app:packageDebugResources UP-TO-DATE
> Task :app:parseDebugLocalResources UP-TO-DATE
> Task :app:createDebugCompatibleScreenManifests UP-TO-DATE
> Task :app:extractDeepLinksDebug UP-TO-DATE
> Task :app:processDebugMainManifest UP-TO-DATE
> Task :app:processDebugManifest UP-TO-DATE
> Task :app:processDebugManifestForPackage UP-TO-DATE
> Task :app:processDebugResources UP-TO-DATE

> Task :app:compileDebugJavaWithJavac FAILED
D:\Flight-app\app\src\main\java\com\example\flight_booking_app\booking\adapter\BookingDetailAdapter.java:181: error: Contact.getName() is defined in an inaccessible class or interface
            h.tvContactName.setText("👤 " + safeStr(data.getContact().getName()));
                                                                     ^
D:\Flight-app\app\src\main\java\com\example\flight_booking_app\booking\adapter\BookingDetailAdapter.java:182: error: Contact.getEmail() is defined in an inaccessible class or interface
            h.tvContactEmail.setText("✉ " + safeStr(data.getContact().getEmail()));
                                                                     ^
D:\Flight-app\app\src\main\java\com\example\flight_booking_app\booking\adapter\BookingDetailAdapter.java:183: error: Contact.getPhone() is defined in an inaccessible class or interface
            h.tvContactPhone.setText("📞 " + safeStr(data.getContact().getPhone()));
                                                                      ^
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors

[Incubating] Problems report is available at: file:///D:/Flight-app/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':app:compileDebugJavaWithJavac'.
> Compilation failed; see the compiler output below.
  D:\Flight-app\app\src\main\java\com\example\flight_booking_app\booking\adapter\BookingDetailAdapter.java:181: error: Contact.getName() is defined in an inaccessible class or interface
              h.tvContactName.setText("👤 " + safeStr(data.getContact().getName()));
                                                                       ^
  D:\Flight-app\app\src\main\java\com\example\flight_booking_app\booking\adapter\BookingDetailAdapter.java:182: error: Contact.getEmail() is defined in an inaccessible class or interface
              h.tvContactEmail.setText("✉ " + safeStr(data.getContact().getEmail()));
                                                                       ^
  D:\Flight-app\app\src\main\java\com\example\flight_booking_app\booking\adapter\BookingDetailAdapter.java:183: error: Contact.getPhone() is defined in an inaccessible class or interface
              h.tvContactPhone.setText("📞 " + safeStr(data.getContact().getPhone()));
                                                                        ^
  Note: Recompile with -Xlint:deprecation for details.
  Note: Some input files use or override a deprecated API.
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 1s
17 actionable tasks: 1 executed, 16 up-to-date
